# react-native-elementary

./: .elementaryspec  .gitignore  .gitmodules  .tool-versions  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  react-native-elementary.podspec  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/elementary/: ElementaryModule.kt  ElementaryPackage.kt
android/src/newarch/com/elementary/: ElementaryTurboModule.java  ElementaryTurboPackage.java
android/src/oldarch/com/elementary/: ElementaryTurboPackage.java
cpp/: AudioResourceLoader.cpp  AudioResourceLoader.h  audioengine.cpp  audioengine.h  react-native-elementary.cpp  react-native-elementary.h
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
example-expo/: app.json  metro.config.js  package.json
example-expo-app/: App.tsx  app.json  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: .xcode.env  Podfile
example/ios/ElementaryExample/: AppDelegate.mm
example/ios/ElementaryExample.xcodeproj/: project.pbxproj
example/ios/ExampleNewArch/: AppDelegate.swift  (+2 more)
example/src/: App.tsx
example_old/: app.json
example_old/android/: settings.gradle
example_old/ios/: File.swift  Podfile
ios/: AudioResourceLoader.mm  Elementary.h  Elementary.mm  miniaudio_impl.m
ios/Elementary.xcodeproj/: project.pbxproj
src/: NativeElementary.ts  index.tsx
(+15 files in other folders)
